--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^18.3.1",
     "react-qr-reader": "^3.0.0-beta-1",
     "react-scripts": "5.0.1",
+    "recordrtc": "^5.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
